--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ganesh's Portfolio</title>
-    <link rel="icon" type="img/jpg" href="./Assets/fab-icon.jpg">
+    <link rel="icon" type="img/jpg" href="./assets/fab-icon.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,7 +64,7 @@
             <div class="row r1">
                 <div class="col-sm-2 col-lg-3 d-none d-sm-flex  justify-content-start align-items-start p-0">
                     <div class="img">
-                        <img src="./Assets/nameste.png" alt="">
+                        <img src="./assets/nameste.png" alt="">
                     </div>
                 </div>
                 <div class=" col-12 col-sm-10 col-lg-9">
@@ -102,7 +102,7 @@
                 <div class="col-md-6 col-12 order-1 order-md-2 d-flex justify-content-center align-items-center">
                     <div class="pic  d-flex justify-content-center align-items-center">
                         <div class="image d-flex justify-content-center align-items-center">
-                            <img src="./Assets/ganesh.png" alt="">
+                            <img src="./assets/ganesh.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="aboutimg">
-                        <img src="./Assets/about-pic.png" alt="">
+                        <img src="./assets/about-pic.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -619,7 +619,7 @@
             <div class="row a d-flex justify-content-center justify-content-md-start align-items-center">
                 <div class="col-md-9 d-flex b justify-content-center align-items-center">
                     <div class="project-img img-fluid">
-                        <img src="./Assets/tjs.jpg" alt="">
+                        <img src="./assets/tjs.jpg" alt="">
                     </div>
                     <div class="project-content">
                         <div class="prj-heading d-flex justify-content-center align-items-center">
@@ -720,7 +720,7 @@
 
                     </div>
                     <div class="project-img img-fluid d-flex">
-                        <img src="./Assets/logo.jpg" alt="">
+                        <img src="./assets/logo.jpg" alt="">
                     </div>
 
                 </div>
@@ -729,7 +729,7 @@
             <div class="row a d-flex justify-content-center justify-content-md-start align-items-center">
                 <div class="col-md-9 d-flex b justify-content-center align-items-center">
                     <div class="project-img img-fluid">
-                        <img src="./Assets/poker.jpg" alt="">
+                        <img src="./assets/poker.jpg" alt="">
                     </div>
                     <div class="project-content">
                         <div class="prj-heading d-flex justify-content-center align-items-center">
