--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
             </div>
             <div class="subheading d-flex justify-content-center align-items-center p-0 m-0">
-                <span>Collage</span>
+                <span>College</span>
             </div>
             <div class="row edu d-flex justify-content-around align-items-center">
                 <div class="col-6 d-flex justify-content-end align-items-center">
